Cambio del json de google con el nuevo sha1 el play store, modificacion del proguard para obtener data de firebase, mejora en los permisos para los mapas, solucion de error al dar boton de llamada

--- a/app/src/main/res/layout/include_map_cliente.xml
+++ b/app/src/main/res/layout/include_map_cliente.xml
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/btnllamada"
+            android:id="@+id/btn_llamada"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="80dp"
