--- a/app/src/main/res/layout/activity_map_driver.xml
+++ b/app/src/main/res/layout/activity_map_driver.xml
@@ -14,21 +14,20 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/btnConnect"
-        android:layout_width="236dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_gravity="center|bottom"
         android:layout_margin="30dp"
-        android:layout_marginLeft="50dp"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center"
+        android:padding="20dp"
         android:text="CONECTARSE"
-        android:textColor="#FFFFFF"
-
+        android:textColor="@color/white"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
