--- a/app/src/main/res/layout/activity_notification_booking.xml
+++ b/app/src/main/res/layout/activity_notification_booking.xml
@@ -24,6 +24,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="18dp"
+                android:src="@mipmap/ic_launcher"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -79,54 +80,89 @@
                 app:layout_constraintTop_toBottomOf="@+id/txt_end" />
 
             <TextView
-                android:id="@+id/txt_time"
-                android:layout_width="0dp"
+                android:id="@+id/txt_price"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_margin="10dp"
                 android:gravity="center"
-                android:text="Tiempo de llegada"
-                android:textColor="@android:color/black"
-                android:textSize="22sp"
-                app:layout_constraintEnd_toStartOf="@+id/txt_km"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_address_end" />
-
-            <TextView
-                android:id="@+id/txt_time_arrive"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:text="5 minutos"
-                android:textSize="17sp"
-                app:layout_constraintEnd_toEndOf="@+id/txt_time"
-                app:layout_constraintStart_toStartOf="@+id/txt_time"
-                app:layout_constraintTop_toBottomOf="@+id/txt_time" />
-
-            <TextView
-                android:id="@+id/txt_km"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="Distancia de llegada"
-                android:textColor="@android:color/black"
-                android:textSize="22sp"
+                android:textColor="@color/colorRed"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txt_time"
-                app:layout_constraintTop_toBottomOf="@+id/txt_address_end" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_address_end"
+                tools:text="Precio a cobrar: S/10.00" />
 
-            <TextView
-                android:id="@+id/txt_km_arrive"
-                android:layout_width="0dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_time_and_distance"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:text="5 minutos"
-                android:textSize="17sp"
-                app:layout_constraintEnd_toEndOf="@+id/txt_km"
-                app:layout_constraintStart_toStartOf="@+id/txt_km"
-                app:layout_constraintTop_toBottomOf="@+id/txt_km" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_price">
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/line"
+                    android:layout_width="1dp"
+                    android:layout_height="1dp"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent=".5" />
+
+                <TextView
+                    android:id="@+id/txt_title_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:gravity="center"
+                    android:text="Tiempo de llegada"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toTopOf="@+id/txt_time"
+                    app:layout_constraintEnd_toStartOf="@+id/line"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/txt_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="5 minutos"
+                    android:textSize="17sp"
+                    app:layout_constraintEnd_toEndOf="@+id/txt_title_time"
+                    app:layout_constraintStart_toStartOf="@+id/txt_title_time"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_title_time" />
+
+                <TextView
+                    android:id="@+id/txt_title_km"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:gravity="center"
+                    android:text="Distancia de llegada"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/txt_title_time"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/line"
+                    app:layout_constraintTop_toTopOf="@+id/txt_title_time" />
+
+                <TextView
+                    android:id="@+id/txt_km"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:text="5 minutos"
+                    android:textSize="17sp"
+                    app:layout_constraintEnd_toEndOf="@+id/txt_title_km"
+                    app:layout_constraintStart_toStartOf="@+id/txt_title_km"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_title_km" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/txt_time_out"
@@ -138,7 +174,7 @@
                 android:textSize="40sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_time_arrive" />
+                app:layout_constraintTop_toBottomOf="@+id/container_time_and_distance" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -176,4 +212,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_accept"
         app:layout_constraintTop_toTopOf="@+id/btn_accept" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
