--- a/app/src/main/res/layout/activity_login_admi.xml
+++ b/app/src/main/res/layout/activity_login_admi.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".driver.OpcionDualDriverActivity">
+    tools:context=".admiSoft.LoginAdmiActivity">
+
 
     <include
         android:id="@+id/include_toolbar"
@@ -136,30 +136,6 @@
                     android:background="@drawable/rounded_button"
                     android:backgroundTint="#155AA3"
                     android:text="Tengo Cuenta"
-                    android:textColor="@color/Colorletras"
-                    android:textSize="22dp" />
-
-                <Button
-                    android:id="@+id/btn_register_driver"
-                    android:layout_width="178dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="-80dp"
-                    android:background="@drawable/rounded_button"
-                    android:backgroundTint="#155AA3"
-                    android:text="Registro"
-                    android:textColor="@color/Colorletras"
-                    android:textSize="22dp" />
-
-                <Button
-                    android:id="@+id/btnMapaVer"
-                    android:layout_width="178dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/rounded_button"
-                    android:backgroundTint="#155AA3"
-                    android:text="Adm."
                     android:textColor="@color/Colorletras"
                     android:textSize="22dp" />
 
