--- a/app/src/main/res/layout/activity_map_driver_booking.xml
+++ b/app/src/main/res/layout/activity_map_driver_booking.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     tools:context=".driver.MapDriverActivity">
 
     <include
@@ -40,8 +39,8 @@
         app:layout_constraintTop_toBottomOf="@id/btn_start_booking"
         tools:visibility="visible" />
 
-    <fragment
-        android:id="@+id/map"
+    <com.mapbox.mapboxsdk.maps.MapView
+        android:id="@+id/map_view"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
