--- a/app/src/main/res/layout/activity_request_driver.xml
+++ b/app/src/main/res/layout/activity_request_driver.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".client.RequestDriverActivity">
+    tools:context=".ui.client.RequestDriverActivity">
 
     <com.github.florent37.shapeofview.shapes.ArcView
         android:id="@+id/container_loading"
