--- a/app/src/main/res/layout/activity_upload_driver.xml
+++ b/app/src/main/res/layout/activity_upload_driver.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".driver.registerDriver.UploadDriverActivity">
+    tools:context=".ui.driver.registerDriver.UploadDriverActivity">
 
     <include
         android:id="@+id/include_toolbar"
