--- a/app/src/main/res/layout/activity_detail_request.xml
+++ b/app/src/main/res/layout/activity_detail_request.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".client.DetailRequestActivity">
+    tools:context=".ui.client.DetailRequestActivity">
 
     <FrameLayout
         android:id="@+id/container_map"
