--- a/app/src/main/res/layout/activity_history_booking_client.xml
+++ b/app/src/main/res/layout/activity_history_booking_client.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".driver.MapDriverActivity">
+    tools:context=".ui.driver.MapDriverActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/btn_back_presset"
