--- a/app/src/main/res/layout/activity_login_cliente.xml
+++ b/app/src/main/res/layout/activity_login_cliente.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/overlay"
     android:fitsSystemWindows="true"
-    tools:context=".client.LoginClientActivity">
+    tools:context=".ui.client.LoginClientActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
