--- a/app/src/main/res/layout/activity_map_driver_booking.xml
+++ b/app/src/main/res/layout/activity_map_driver_booking.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".driver.MapDriverActivity">
+    tools:context=".ui.driver.MapDriverActivity">
 
     <include
         android:id="@+id/include_toolbar"
@@ -65,6 +65,16 @@
             android:layout_height="wrap_content" />
 
     </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/btn_navigation"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_action_navigation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/black" />
 
     <com.github.florent37.shapeofview.shapes.BubbleView
         android:id="@+id/container_info_client"
@@ -158,20 +168,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </com.github.florent37.shapeofview.shapes.BubbleView>
-
-    <!--<androidx.cardview.widget.CardView
-        android:id="@+id/cv_info_client"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-
-
-    </androidx.cardview.widget.CardView>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
