--- a/app/src/main/res/layout/activity_mapa_admi.xml
+++ b/app/src/main/res/layout/activity_mapa_admi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mapaAdmi.MapaAdmiActivity">
+    tools:context=".ui.mapaAdmi.MapaAdmiActivity">
 
     <Button
         android:id="@+id/button"
