--- a/app/src/main/res/layout/activity_option_desarrollo.xml
+++ b/app/src/main/res/layout/activity_option_desarrollo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".admiSoft.OptionDesarrolloActivity">
+    tools:context=".ui.admiSoft.OptionDesarrolloActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/btn_menu"
