--- a/app/src/main/res/layout/activity_profile_driver.xml
+++ b/app/src/main/res/layout/activity_profile_driver.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".client.RequestDriverActivity">
+    tools:context=".ui.client.RequestDriverActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/btn_back_presset"
