--- a/app/src/main/res/layout/activity_registro_driver_segundo.xml
+++ b/app/src/main/res/layout/activity_registro_driver_segundo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".driver.registerDriver.RegistroDriverSegundoActivity">
+    tools:context=".ui.driver.registerDriver.RegistroDriverSegundoActivity">
 
     <include layout="@layout/action_bar_toolbar" />
 
